--- a/LicenseChange/resources.qrc
+++ b/LicenseChange/resources.qrc
@@ -5,5 +5,6 @@
 		<file>img/app_32x32.png</file>
 		<file>img/app_22x22.png</file>
 		<file>img/app_16x16.png</file>
+		<file>img/dialog-cancel.png</file>
 	</qresource>
 </RCC>
