--- a/LicenseChange/resources.qrc
+++ b/LicenseChange/resources.qrc
@@ -6,5 +6,7 @@
 		<file>img/app_22x22.png</file>
 		<file>img/app_16x16.png</file>
 		<file>img/dialog-cancel.png</file>
+		<file>img/code-function.png</file>
+		<file>img/arrow-right.png</file>
 	</qresource>
 </RCC>
