--- a/Magnifier/resources.qrc
+++ b/Magnifier/resources.qrc
@@ -1,6 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>img/qt.png</file>
+        <file>img/dialog-close.png</file>
+        <file>img/document-save.png</file>
+        <file>img/edit-copy.png</file>
         <file>img/zoom-in.png</file>
         <file>img/application-exit.png</file>
         <file>img/help-about.png</file>
